update desktop version

--- a/index.html
+++ b/index.html
@@ -11,49 +11,72 @@
     <link rel="stylesheet" href="./styles.css" />
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Palanquin&family=Staatliches&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&family=Palanquin&family=Staatliches&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
-    <header>
-      <img src="./assets/logo.svg" alt="Imagem com um sorvete" />
-      <h1>space cream</h1>
-    </header>
-    <div class="page">
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum magnam
-        exercitationem culpa quam similique, sint inventore quas veniam harum ex
-        mollitia ducimus temporibus repellat. Voluptate velit praesentium quasi
-        quo consequuntur.
-      </p>
-      <main>
-        <div class="card">
-          <img
-            src="./assets/ice-cream.png"
-            alt="Imagem de um picolé de sorvete com amora e folhas ao redor"
-          />
-          <span>Paletas</span>
-        </div>
-        <div class="card">
-          <img
-            src="./assets/shake.png"
-            alt="Imagem de um copo com sorvete morango, banana e amora"
-          />
-          <span>Shakes</span>
-        </div>
-        <div class="card">
-          <img
-            src="./assets/pasta.png"
-            alt="Imagem de uma colher com massa de sorvete roxo"
-          />
-          <span>Massas</span>
-        </div>
-        <div class="card">
-          <img src="./assets/popsicle.png" alt="Imagem de um picolé" />
-          <span>Picolés</span>
-        </div>
-      </main>
+    <div class="container">
+      <header>
+        <img src="./assets/logo.svg" alt="Imagem com um sorvete" />
+        <h1>space cream</h1>
+        <p class="mobile">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a
+          rhoncus leo. Donec at scelerisque magna. Nullam vitae neque sit amet
+          erat dignissim cursus ac ac lectus. Aliquam erat volutpat. Praesent at
+          quam aliquet.
+        </p>
+        <p class="desktop">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a
+          rhoncus leo. Donec at scelerisque magna. Nullam vitae neque sit amet
+          erat dignissim cursus ac ac lectus. Aliquam erat volutpat. Praesent at
+          quam aliquet, pharetra est in, sagittis lorem.elit. Donec a rhoncus
+          leo. Donec at scelerisque magna. Nullam vitae neque sit amet erat
+          dignissim cursus ac ac lectus. Aliquam erat volutpat. Praesent at quam
+          aliquet, pharetra est in, sagittis lorem.
+        </p>
+      </header>
+      <div class="page">
+        <main>
+          <div class="card">
+            <img
+              src="./assets/ice-cream.png"
+              alt="Imagem de um picolé de sorvete com amora e folhas ao redor"
+            />
+            <span>Paletas</span>
+          </div>
+          <div class="card">
+            <img
+              src="./assets/ice-cream.png"
+              alt="Imagem de um picolé de sorvete com amora e folhas ao redor"
+            />
+            <span>Paletas</span>
+          </div>
+          <div class="card">
+            <img
+              src="./assets/shake.png"
+              alt="Imagem de um copo com sorvete morango, banana e amora"
+            />
+            <span>Shakes</span>
+          </div>
+          <div class="card">
+            <img
+              src="./assets/pasta.png"
+              alt="Imagem de uma colher com massa de sorvete roxo"
+            />
+            <span>Massas</span>
+          </div>
+          <div class="card">
+            <img src="./assets/popsicle.png" alt="Imagem de um picolé" />
+            <span>Picolés</span>
+          </div>
+          <div class="card">
+            <img src="./assets/popsicle.png" alt="Imagem de um picolé" />
+            <span>Picolés</span>
+          </div>
+        </main>
+        <footer>fale conosco no instagram<a href="#">@space-cream</a></footer>
+      </div>
     </div>
   </body>
 </html>
