--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <span>Popsicle</span>
           </div>
         </main>
-        <footer>fale conosco no instagram<a href="#">@space-cream</a></footer>
+        <footer>Contact on Instagram<a href="#">@space-cream</a></footer>
       </div>
     </div>
   </body>
